Fix encryption/decryption bugs - Fix disableEncryption to preserve exact content using writeString - Add salt validation after encryption - Add rollback mechanism if decryption verification fails - Improve error messages and status feedback - Prevent data loss from corrupted encryption state